Fix for image overlay jumping around on zoom in.

--- a/eems_online_app/static/css/base.css
+++ b/eems_online_app/static/css/base.css
@@ -790,6 +790,10 @@ ul.buttons li.selected a:hover
   display: none;
 }
 
+.leaflet-container img.leaflet-image-layer {
+    max-width: none !important;
+}
+
 #link {
 	width: 650px !important;
 	cursor: default;
